--- a/src/lk/ccns/d24/view/LoginForm.fxml
+++ b/src/lk/ccns/d24/view/LoginForm.fxml
@@ -17,7 +17,25 @@
 <AnchorPane fx:id="loginFormAP" prefHeight="782.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ccns.d24.controller.LoginFormController">
     <AnchorPane prefHeight="771.0" prefWidth="1133.0" styleClass="body" stylesheets="@asset/stylesheet/styleForLoginForm.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <HBox prefHeight="726.0" prefWidth="1063.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <AnchorPane prefHeight="726.0" prefWidth="459.0" styleClass="caractor" stylesheets="@asset/stylesheet/styleForLoginForm.css" HBox.hgrow="ALWAYS" />
+            <AnchorPane prefHeight="726.0" prefWidth="459.0" styleClass="caractor" stylesheets="@asset/stylesheet/styleForLoginForm.css" HBox.hgrow="ALWAYS">
+                <Pane layoutX="7.0" layoutY="704.0" prefHeight="79.0" prefWidth="145.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                    <Label layoutX="10.0" layoutY="10.0" text="Version 1.0.0" textFill="#aeacac">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label layoutX="10.0" layoutY="30.0" text="Powerd By CCNS" textFill="#aeacac">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                    <Label layoutX="10.0" layoutY="50.0" text="ccns@gmail.com" textFill="#aeacac">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                    </Label>
+                </Pane>
+            </AnchorPane>
             <AnchorPane prefHeight="726.0" prefWidth="597.0" HBox.hgrow="ALWAYS">
                 <Label layoutX="-77.0" layoutY="57.0" prefHeight="79.0" prefWidth="708.0" text="Welcome to D24 Hostel System !" textAlignment="CENTER" AnchorPane.leftAnchor="-77.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="57.0">
                     <font>
@@ -44,7 +62,7 @@
                             <Cursor fx:constant="TEXT" />
                         </cursor>
                     </JFXPasswordField>
-                    <ImageView fitHeight="25.0" fitWidth="50.0" layoutX="530.0" layoutY="144.0" onMouseClicked="#viewPasswordOnAction" pickOnBounds="true" preserveRatio="true">
+                    <ImageView fx:id="sowPasswordIcon" fitHeight="25.0" fitWidth="50.0" layoutX="530.0" layoutY="144.0" onMouseClicked="#viewPasswordOnAction" pickOnBounds="true" preserveRatio="true">
                         <cursor>
                             <Cursor fx:constant="HAND" />
                         </cursor>
@@ -58,7 +76,7 @@
                             <Cursor fx:constant="HAND" />
                         </cursor>
                     </JFXButton>
-                    <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="83.0" layoutY="394.0" onAction="#signupOnAction" prefHeight="65.0" prefWidth="414.0" styleClass="buttonSignup" stylesheets="@asset/stylesheet/styleForLoginForm.css" text="Sign up">
+                    <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="83.0" layoutY="394.0" onMouseClicked="#signupNavigationOnAction" prefHeight="65.0" prefWidth="414.0" styleClass="buttonSignup" stylesheets="@asset/stylesheet/styleForLoginForm.css" text="Sign up">
                         <font>
                             <Font size="25.0" />
                         </font>
@@ -81,6 +99,62 @@
                     </Label>
                     <Line endX="111.66668701171875" layoutX="152.0" layoutY="360.0" startX="-67.66668701171875" />
                     <Line endX="106.33331298828125" layoutX="392.0" layoutY="360.0" startX="-93.0" />
+                    <Pane fx:id="signUpPane" layoutX="-230.0" layoutY="-86.0" prefHeight="630.0" prefWidth="562.0" style="-fx-background-color: white; -fx-background-radius: 30; -fx-border-color: black; -fx-border-radius: 30;">
+                        <JFXTextField fx:id="txtSignUserName" focusColor="#073fe6" layoutX="81.0" layoutY="183.0" prefHeight="51.0" prefWidth="400.0" promptText="User Name" style="-fx-font-color: black;" unFocusColor="BLACK">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="TEXT" />
+                            </cursor>
+                            <effect>
+                                <Glow />
+                            </effect>
+                        </JFXTextField>
+                        <JFXTextField fx:id="txtSignPassword" focusColor="#073fe6" layoutX="81.0" layoutY="278.0" prefHeight="51.0" prefWidth="400.0" promptText="Password" style="-fx-font-color: black;" unFocusColor="BLACK">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="TEXT" />
+                            </cursor>
+                            <effect>
+                                <Glow />
+                            </effect>
+                        </JFXTextField>
+                        <JFXTextField fx:id="txtSignRePassword" focusColor="#073fe6" layoutX="81.0" layoutY="365.0" prefHeight="51.0" prefWidth="400.0" promptText="Re-Enter Passwoard" style="-fx-font-color: black;" unFocusColor="BLACK">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="TEXT" />
+                            </cursor>
+                            <effect>
+                                <Glow />
+                            </effect>
+                        </JFXTextField>
+                        <Label layoutX="184.0" layoutY="54.0" prefHeight="79.0" prefWidth="180.0" text="Sign Up">
+                            <font>
+                                <Font name="System Bold" size="46.0" />
+                            </font>
+                        </Label>
+                        <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="67.0" layoutY="505.0" onAction="#signupOnAction" prefHeight="65.0" prefWidth="414.0" styleClass="buttonSignup" stylesheets="@asset/stylesheet/styleForLoginForm.css" text="Sign up">
+                            <font>
+                                <Font size="25.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </JFXButton>
+                        <ImageView fitHeight="51.0" fitWidth="162.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" smooth="false">
+                            <Image url="@asset/logo/d24_logo.png" />
+                        </ImageView>
+                  <ImageView fitHeight="36.0" fitWidth="36.0" layoutX="512.0" layoutY="14.0" onMouseClicked="#closeSignUpPane" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@asset/stylesheet/icon/icons8-close-48.png" />
+                     </image>
+                  </ImageView>
+                    </Pane>
                 </Pane>
             </AnchorPane>
         </HBox>
