--- a/src/lk/ccns/d24/view/ManageReservationForm.fxml
+++ b/src/lk/ccns/d24/view/ManageReservationForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="reservationAP" prefHeight="719.0" prefWidth="939.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ccns.d24.controller.MakeReservationFormController">
+<AnchorPane fx:id="reservationAP" prefHeight="719.0" prefWidth="939.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ccns.d24.controller.ManageReservationFormController">
    <children>
       <Pane layoutX="-1.0" prefHeight="43.0" prefWidth="939.0" style="-fx-background-color: #FDA7DF; -fx-border-radius: 30; -fx-background-radius: 30;">
          <children>
@@ -127,7 +127,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="TEXT" />
+                  <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
             <JFXComboBox fx:id="cmbRoomID" layoutX="30.0" layoutY="22.0" onAction="#selectRoomIdOnAction" prefHeight="39.0" prefWidth="195.0" promptText="Select Room ID" style="-fx-font-size: 16;">
@@ -140,7 +140,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="TEXT" />
+                  <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
             <JFXTextField fx:id="txtType" labelFloat="true" layoutX="74.0" layoutY="89.0" prefHeight="30.0" prefWidth="213.0" promptText="Type">
@@ -148,7 +148,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="TEXT" />
+                  <Cursor fx:constant="DEFAULT" />
                </cursor>
             </JFXTextField>
             <JFXTextField fx:id="txtRoomQTY" labelFloat="true" layoutX="238.0" layoutY="22.0" prefHeight="39.0" prefWidth="98.0" promptText="Room QTY">
