--- a/src/lk/ccns/d24/view/asset/stylesheet/styleSheetForDashBoard.css
+++ b/src/lk/ccns/d24/view/asset/stylesheet/styleSheetForDashBoard.css
@@ -6,7 +6,7 @@
     * Created by IntelliJ IDEA.
 */
 .body{
-    -fx-background-color:#ecf0f1;
+    -fx-background-color:#edeeef;
     -fx-background-size: contain;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
